--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "github-webhook-handler": "^1.0.0",
+    "express-github-webhook": "^1.0.6",
     "pg": "^7.12.1",
     "pg-hstore": "^2.3.3",
     "sequelize": "^5.19.7",
